tests/sksl/errors/golden/OverflowUintLiteral.glsl
### Compilation failed:

error: 4: integer is too large: 4294967296
1 error
